# TaskManager

./: .gitignore  fixture.json  pyproject.toml  requirements.txt
TaskManager/: settings.py  urls.py
api/: serializers.py  urls.py  views.py
login/: admin.py  models.py  urls.py  views.py
static/css/: style.css
tasks/: choices.py  forms.py  models.py  urls.py  views.py
templates/: _base.html  base.html
templates/login/: login.html
templates/tasks/: board.html  create.html  detail.html  list.html
templates/users/: profile.html
users/: urls.py  views.py
