[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["howard <vzagulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-bootstrap-datepicker-plus = "^5.0.5"
django-bootstrap-icons = "^0.9.0"
django-bootstrap5 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
